--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Coming soon...Le Wagaon</h1>
-    <img src="https://unsplash.it/200/200" alt="">
+    <div id="container">
+      <img id="logo" src="https://unsplash.it/200/200" alt="">
+      <h1>Coming soon...Le Wagaon</h1>
+    </div>
   </body>
 </html>
